# mcp-omnienv-nix

./: README.md  flake.nix  pyproject.toml
mcp_omnienv_nix/: __init__.py  server.py
tests/: test_server.py
