[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-omnienv-nix"
version = "0.0.1"
description = "MCP server that spins up Nix-powered ephemeral environments for multiple languages."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Erik Parawell"}
]
dependencies = [
  "fastmcp>=2.11.0",
  "requests>=2.32.0",
]

[project.scripts]
mcp-omnienv-nix = "mcp_omnienv_nix.server:main"

[tool.hatch.metadata]
allow-direct-references = true
